<resources>
    <string name="app_name">Hourglass</string>

    <!-- used in homepage -->
    <string name="start_rest">START REST</string>
    <string name="ins_after_rest">Finish your rest whenever you want!</string>
    <string name="stop_rest">FINISH REST</string>
    <string name="set_relax">Please set your relax time!</string>
    <string name="set_focus">Please set your focus time!</string>
    <string name="start_focus">START FOCUS</string>

    <string name="default_time_section_name">Default time management</string>
    <string name="settings_default_relax_time">Relax time</string>
    <string name="default_relax_time_summary">Set a default relax time</string>
    <string name="settings_default_focus_time">Focus time</string>
    <string name="default_focus_time_summary">Set a default focus time</string>
    <string name="settings_default_snooze_time">Snooze time</string>
    <string name="default_snooze_time_summary">Set a default snooze time</string>
    <string name="access_management_section_name">Access management</string>
    <string name="access_management_summary">Please whitelist the accessible apps during your focus time.</string>
    <string name="motivational_msg_section_name">Motivational message</string>
    <string name="motivational_msg_summary">Please set a message for yourself.</string>


    <string name="motivational_msg_popup_ins">Customize motivational messages here.</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="focus_warning">Phone Locked \n Don\'t be a slave to your phone!</string>
    <string name="force_exit_confirm_quit">Confirm Quit</string>
    <string name="exit_focus">Exit</string>
    <string name="whitelist">Whitelist</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="minute">min</string>
    <string name="settings">Settings</string>
    <!--    <string name="shared_preference">com.example.myapplication</string> -->
</resources>
